welcome.lessons.welcome.array.has271.Has271.scala.error
has271:-6: error: Missing closing brace `}' assumed here
try {
^has271:1: error: expected class or object definition
def has271(nums:Array[Int]): Boolean = {
^